--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -675,6 +675,30 @@ footer {
     }
 }
 
+.project-infos {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 366px;
+    padding: 15px;
+    font-family: 'Lato', sans-serif;
+
+
+    h3 {
+        font-size: 1.5em;
+        font-weight: 300;
+        color: $heading;
+        margin: 0 0 15px 0;
+    }
+
+    p {
+        color: $text;
+        margin: 0 0 15px 0;
+        font-size: 0.9em;
+        font-family: 'Lato', sans-serif;
+    }
+}
+
 .no-image {
     .project-info {
         position: relative;
